RESOLVED FIXED81529
[chromium] Invalidate/update evicted tiles during commit
https://bugs.webkit.org/show_bug.cgi?id=81529
Summary [chromium] Invalidate/update evicted tiles during commit
Dana Jansens
Reported 2012-03-19 11:25:30 PDT
[chromium] Invalidate/update evicted tiles during commit
Attachments
Patch (4.47 KB, patch)
2012-03-19 11:27 PDT, Dana Jansens
no flags
Patch (6.64 KB, patch)
2012-03-19 11:37 PDT, Dana Jansens
no flags
Patch (7.65 KB, patch)
2012-03-19 13:21 PDT, Dana Jansens
no flags
Dana Jansens
Comment 1 2012-03-19 11:27:44 PDT
WebKit Review Bot
Comment 2 2012-03-19 11:31:16 PDT
Attachment 132614 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:12: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dana Jansens
Comment 3 2012-03-19 11:37:11 PDT
Adrienne Walker
Comment 4 2012-03-19 13:05:15 PDT
Comment on attachment 132617 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=132617&action=review Sorry for not catching this issue the first time through review. > Source/WebKit/chromium/tests/TiledLayerChromiumTest.cpp:370 > + EXPECT_TRUE(layerImpl->hasTileAt(0, 0)); > + EXPECT_FALSE(layerImpl->hasTileAt(0, 1)); Can you also verify after a pushPropertiesTo that neither tile is there? I don't think we have any test related to that.
Adrienne Walker
Comment 5 2012-03-19 13:05:54 PDT
(In reply to comment #4) > (From update of attachment 132617 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=132617&action=review > > Sorry for not catching this issue the first time through review. > > > Source/WebKit/chromium/tests/TiledLayerChromiumTest.cpp:370 > > + EXPECT_TRUE(layerImpl->hasTileAt(0, 0)); > > + EXPECT_FALSE(layerImpl->hasTileAt(0, 1)); > > Can you also verify after a pushPropertiesTo that neither tile is there? I don't think we have any test related to that. ...before doing any painting, I mean.
Dana Jansens
Comment 6 2012-03-19 13:21:10 PDT
Created attachment 132644 [details] Patch Thanks! Done!
WebKit Review Bot
Comment 7 2012-03-19 14:37:16 PDT
Comment on attachment 132644 [details] Patch Clearing flags on attachment: 132644 Committed r111253: <http://trac.webkit.org/changeset/111253>
WebKit Review Bot
Comment 8 2012-03-19 14:37:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.