[chromium] Invalidate/update evicted tiles during commit https://bugs.webkit.org/show_bug.cgi?id=81529

Patch by Dana Jansens <danakj@chromium.org> on 2012-03-19
Reviewed by Adrienne Walker.

Source/WebCore:

A previous change caused a regression where evicted (invalid) tiles
were no longer marked as dirty and updated. The regress was caused
in https://bugs.webkit.org/show_bug.cgi?id=81175 and is fixed here.

Unit test: TiledLayerChromiumTest.pushDeletedTiles

* platform/graphics/chromium/TiledLayerChromium.cpp:
(WebCore::UpdatableTile::copyAndClearDirty):
(WebCore::TiledLayerChromium::prepareToUpdateTiles):

Source/WebKit/chromium:

* tests/TiledLayerChromiumTest.cpp:
(WTF::TEST):
(WTF):

Canonical link: https://commits.webkit.org/98791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111253 268f45cc-cd09-0410-ab3c-d52691b4dbfc